# wowhead_comments_scrape

./: pyproject.toml
src/wowhead_comments_scrape/: scraper.py
