[tool.poetry]
name = "wowhead-comments-scrape"
version = "0.1.0"
description = "Scraper to grab comments from Wowhead pages"
authors = ["Ryan Davis <ryancraigdavis@github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.2"
requests = "^2.31.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
